# document-extractor

./: LICENSE  README.md  pyproject.toml
backend/: main.py
backend/core/: runner.py
backend/models/: api_models.py
backend/routes/: router.py
frontend/: app.js  index.html  styles.css
