[project]
name = "document-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "lokinsethia@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
